samples/_failures_safe/1761723639_1faaa8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_528278ae.c: In function ‘main’:
./samples/SAFE/__tmp_528278ae.c:155:9: error: expected expression at end of input
  155 |         for (int j = 0;
      |         ^~~
./samples/SAFE/__tmp_528278ae.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_528278ae.c:155:9: error: expected declaration or statement at end of input
